PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/FormRequest__c.object-meta.xml
<CustomObject>
    <description>재직증명서등(추후 추가될 수 있음)을 요청
승인 출력하기위한 오브젝트</description>
    <label>증명서</label>
    <nameField>
        <displayFormat>DNT. {YY}-{MM}{000}</displayFormat>
        <label>문서번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>