PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>사원 명</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>증명서</relationshipLabel>
    <relationshipName>FormRequest_Employee</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>