PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/EngAddress__c.field-meta.xml
<CustomField>
    <fullName>EngAddress__c</fullName>
    <inlineHelpText>영문 재직 및 경력 증명서 발급 시, 영문으로 주소를 입력해주세요.</inlineHelpText>
    <label>영문 주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>