PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/EngName__c.field-meta.xml
<CustomField>
    <fullName>EngName__c</fullName>
    <label>사원 명(영문)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>