PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_Address__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_Address__c</fullName>
    <defaultValue>$User.User_Address__c</defaultValue>
    <inlineHelpText>사용자 정보에 있는 값이 기본값이며 
값이 없거나 다를 경우 입력하세요.</inlineHelpText>
    <label>주소</label>
    <length>250</length>
    <type>Text</type>
</CustomField>