PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_Date__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>증명서에 출력되는 일자입니다.</inlineHelpText>
    <label>신청일자</label>
    <type>Date</type>
</CustomField>