PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_Division__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_Division__c</fullName>
    <defaultValue>$User.Division &amp; &apos; &apos; &amp; $User.Department</defaultValue>
    <inlineHelpText>부서
사용자 정보에 있는 부서(Division + Department) 값이 기본 값입니다.
값이 없거나 다를 경우 입력하세요.</inlineHelpText>
    <label>부서</label>
    <length>50</length>
    <type>Text</type>
</CustomField>