PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_JoinDate__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_JoinDate__c</fullName>
    <formula>Employee_Name__r.JoinDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>입사일자</label>
    <type>Date</type>
</CustomField>