PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_PersonalNo__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_PersonalNo__c</fullName>
    <defaultValue>$User.User_PersonalNo__c</defaultValue>
    <inlineHelpText>주민등록번호
-(하이픈)을 제외한 주민등록번호 13자리입니다.
사용자 정보에 있는 값이 기본값이며 
값이 없거나 다를 경우 입력하세요.</inlineHelpText>
    <label>주민번호</label>
    <length>13</length>
    <type>Text</type>
</CustomField>