PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_PsnlNoFormula__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_PsnlNoFormula__c</fullName>
    <formula>LEFT( FormRequest_PersonalNo__c, 6) &amp; &apos; - &apos; &amp;
IF( FormRequest_ShowPrvNo__c ,RIGHT(FormRequest_PersonalNo__c, 7),&apos;*******&apos;)</formula>
    <label>주민등록번호</label>
    <type>Text</type>
</CustomField>