PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_Purpose__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_Purpose__c</fullName>
    <label>용도</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>