PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_ShowPrvNo__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_ShowPrvNo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>주민번호 뒷자리를 표시할 경우 체크하세요.</inlineHelpText>
    <label>주민번호 뒷자리 표시 여부</label>
    <type>Checkbox</type>
</CustomField>