PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_Status__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_Status__c</fullName>
    <label>승인상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>작성중</fullName>
                <default>true</default>
                <label>작성중</label>
            </value>
            <value>
                <fullName>승인중</fullName>
            </value>
            <value>
                <fullName>승인완료</fullName>
            </value>
            <value>
                <fullName>반려</fullName>
            </value>
            <value>
                <fullName>출력기한 만료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>