PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_ToSubmit__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_ToSubmit__c</fullName>
    <label>제출처</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>