PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequest_Type__c.field-meta.xml
<CustomField>
    <fullName>FormRequest_Type__c</fullName>
    <description>신청문서</description>
    <inlineHelpText>신청하는 문서의 종류를 선택하세요.
(재직증명서 외 필요한 문서가 있을 경우 개발의뢰 요청하세요.)</inlineHelpText>
    <label>신청문서</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>재직증명서</fullName>
                <default>true</default>
                <label>재직증명서</label>
            </value>
            <value>
                <fullName>경력증명서</fullName>
                <isActive>false</isActive>
                <label>경력증명서</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>