PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/FormRequestAddress__c.field-meta.xml
<CustomField>
    <fullName>FormRequestAddress__c</fullName>
    <formula>Employee_Name__r.CurrentAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>주소</label>
    <type>Text</type>
</CustomField>