PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/IsEmployee__c.field-meta.xml
<CustomField>
    <fullName>IsEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>증명서 발급 시 사원정보와 동일하게 출력</inlineHelpText>
    <label>사원정보 동일</label>
    <type>Checkbox</type>
</CustomField>