PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/fields/LanguageType__c.field-meta.xml
<CustomField>
    <fullName>LanguageType__c</fullName>
    <label>구분</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>국문</fullName>
            </value>
            <value>
                <fullName>영문</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>