PA_Education/TestMenifest/force-app/main/default/objects/FormRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>FormRequest_Type__c</columns>
    <columns>FormRequest_Date__c</columns>
    <columns>FormRequest_Purpose__c</columns>
    <columns>FormRequest_ToSubmit__c</columns>
    <columns>FormRequest_ShowPrvNo__c</columns>
    <columns>FormRequest_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>